# mutils

./: CMakeLists  CMakeLists.txt  LICENSE.md  NOTES.md  README.md  a.h  app.py
src/: mutils.h
src/algorithms/: algorithms.h
src/aliases/: aliases.h
src/colors/: colors.h
src/functions/error/: error.c  error.h
src/graphs/: graphs.h
src/hashes/: hashes.h
src/lists/: lists.h
src/maps/: maps.h
src/math/algebra/: math_algebra.h
src/math/constants/: constants.h
src/math/trigonometry/: math_trigonometry.h
src/matrices/: matrices.h
src/queues/: queues.h
src/stacks/: stacks.h
src/trees/: trees.h
src/vectors/: vectors.h
